--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "//",
     "noPrefix": "",
-    "token": "Njk4MzkwMDQzMzAzMjE1MTY2.XpFKYQ.GH8OomguDnwgW4YXv5Ie3IU-FZg",
+    "token": "Njk4MzkwMDQzMzAzMjE1MTY2.XpsrXw._bZgw6CN_8Woqpwt-cNQqYzjtIg",
     "giphyToken": "ipIyDHITDvnTdNlK4YmvyS0mLlFJkIJ5",
     "currency": " NEO",
     "pCurrency": " WEO "
