--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "prefix": "m.",
+    "prefix": "///",
     "noPrefix": "",
     "token": "Njk4MzkwMDQzMzAzMjE1MTY2.XpsrXw._bZgw6CN_8Woqpwt-cNQqYzjtIg",
     "giphyToken": "ipIyDHITDvnTdNlK4YmvyS0mLlFJkIJ5",
